<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/icons_login"
            tools:ignore="VectorDrawableCompat"
            android:contentDescription="@string/todo" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="9dp"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="9dp"
            tools:ignore="TouchTargetSizeCheck"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="9dp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/tvAlreadyAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:padding="3dp"
            android:text="@string/already_account" />

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:text="@string/signup"
            app:cornerRadius="4dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bthGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/icon_google"
                android:padding="15dp"

                android:textColor="@color/black"
                app:backgroundTint="@color/white"
                app:cornerRadius="4dp" />

<!--            <Button-->
<!--                android:id="@+id/btnFb"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="4dp"-->
<!--                android:layout_marginLeft="4dp"-->
<!--                android:layout_weight="1"-->
<!--                android:drawableLeft="@drawable/ic_facebook1"-->
<!--                android:padding="15dp"-->
<!--                android:text="@string/facebook"-->
<!--                app:backgroundTint="@color/fb_color"-->
<!--                app:cornerRadius="4dp" />-->
        </LinearLayout>

<!--        <TextView-->
<!--            android:id="@+id/signupPhone"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="15dp"-->
<!--            android:text="@string/sign_up_with_phone"-->
<!--            android:textColor="@color/colorPrimary"-->
<!--            android:textSize="18sp" />-->
    </LinearLayout>


</LinearLayout>